Better navigation and fixed few issues

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,11 @@ dependencies:
     sdk: flutter
   event_bus: any
   flutter_redux: any
-  flutter_socket_io: any
   intl: any
   json_annotation: any
   redux_persist: any
   redux_persist_flutter: any
+  socket_io_client: any
   redux_logging: any
   uuid: any
 
