Added user redux and task input improvements
Added userstate for bearer and user information
Added taskinput handling for keyboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_redux: any
   intl: any
   json_annotation: any
+  keyboard_visibility: any
   redux_persist: any
   redux_persist_flutter: any
   socket_io_client: any
