--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   event_bus: any
+  flutter_offline: any
   flutter_redux: any
   intl: any
   json_annotation: any
