Moved fastter_dart to its own repo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   event_bus: any
+  fastter_dart: 
+    path: /home/prijindal/projects/fastter_dart
   firebase_messaging: any
   firebase_storage: any
   font_awesome_flutter: any
