--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fastter_flutter
+name: fastter_todo
 description: An example app using fastter API
 
 # The following defines the version and build number for your application.
