--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     path: /home/prijindal/projects/fastter_dart
   file_chooser:
     path: /home/prijindal/softwares/flutter-desktop-embedding/plugins/file_chooser
+  firebase_analytics: any
   firebase_messaging: any
   firebase_storage: any
   font_awesome_flutter: any
