Switched to websocket

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   tuple: any
   url_launcher: any
   uuid: any
+  web_socket_channel: any
   webview_flutter: any
 
   # The following adds the Cupertino Icons font to your application.
