--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   keyboard_visibility: any
   package_info: any
   share: any
+  shared_preferences: any
   tuple: any
   url_launcher: any
   uuid: any
