--- a/linux/Makefile
+++ b/linux/Makefile
@@ -74,9 +74,9 @@ WRAPPER_INCLUDE_DIR=$(WRAPPER_ROOT)/include
 INCLUDE_DIRS=$(FLUTTER_APP_CACHE_DIR) $(WRAPPER_INCLUDE_DIR)
 
 # Build settings
-CXX=g++ -std=c++14
+CXX=clang++
 CXXFLAGS.release=-DNDEBUG
-CXXFLAGS=-Wall -Werror $(CXXFLAGS.$(BUILD))
+CXXFLAGS=-std=c++14 -Wall -Werror $(CXXFLAGS.$(BUILD))
 CPPFLAGS=$(patsubst %,-I%,$(INCLUDE_DIRS))
 LDFLAGS=-L$(BUNDLE_LIB_DIR) \
 	-l$(FLUTTER_LIB_NAME) \
