--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_colorpicker: any
   flutter_linkify: any
   flutter_signin_button: any
+  flutter_string_encryption: any
   google_sign_in: any
   http: any
   image_picker: any
