--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   event_bus: any
   fastter_dart: 
     path: /home/prijindal/projects/fastter_dart
-  firebase_core: 0.4.0+3
+  firebase_core: any
   firebase_messaging: any
   firebase_storage: any
   font_awesome_flutter: any
