Fixed build issues and ugraded to latest versions

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,7 +81,7 @@ android {
             for (String item : runTasks)
             if ( item.contains("assembleRelease") || item.contains("bundleRelease")) {
                 minifyEnabled true
-                useProguard true
+                shrinkResources true
 
                 proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro' 
             }
