--- a/linux/Makefile
+++ b/linux/Makefile
@@ -30,20 +30,22 @@ EXTRA_LDFLAGS=
 # (e.g., optimization level) of the C++ code.
 BUILD=debug
 
+FLUTTER_EPHEMERAL_DIR=flutter/ephemeral
+
 # Configuration provided via flutter tool.
-include flutter/generated_config
+FLUTTER_CONFIG_FILE=$(FLUTTER_EPHEMERAL_DIR)/generated_config.mk
+include $(FLUTTER_CONFIG_FILE)
 
 # Dependency locations
-FLUTTER_APP_CACHE_DIR=flutter/
 FLUTTER_APP_DIR=$(CURDIR)/..
 FLUTTER_APP_BUILD_DIR=$(FLUTTER_APP_DIR)/build
 
 OUT_DIR=$(FLUTTER_APP_BUILD_DIR)/linux
-OBJ_DIR=$(OUT_DIR)/obj
+OBJ_DIR=$(OUT_DIR)/obj/$(BUILD)
 
 # Libraries
 FLUTTER_LIB_NAME=flutter_linux_glfw
-FLUTTER_LIB=$(FLUTTER_APP_CACHE_DIR)/lib$(FLUTTER_LIB_NAME).so
+FLUTTER_LIB=$(FLUTTER_EPHEMERAL_DIR)/lib$(FLUTTER_LIB_NAME).so
 
 # Tools
 FLUTTER_BIN=$(FLUTTER_ROOT)/bin/flutter
@@ -51,7 +53,7 @@ LINUX_BUILD=$(FLUTTER_ROOT)/packages/flutter_tools/bin/tool_backend.sh
 
 # Resources
 ICU_DATA_NAME=icudtl.dat
-ICU_DATA_SOURCE=$(FLUTTER_APP_CACHE_DIR)/$(ICU_DATA_NAME)
+ICU_DATA_SOURCE=$(FLUTTER_EPHEMERAL_DIR)/$(ICU_DATA_NAME)
 FLUTTER_ASSETS_NAME=flutter_assets
 FLUTTER_ASSETS_SOURCE=$(FLUTTER_APP_BUILD_DIR)/$(FLUTTER_ASSETS_NAME)
 
@@ -71,7 +73,7 @@ ALL_LIBS_OUT=$(FLUTTER_LIB_OUT) \
 # Use abspath for the wrapper root, which can contain relative paths; the
 # intermediate build files will be based on the source path, which will cause
 # issues if they start with one or more '../'s.
-WRAPPER_ROOT=$(abspath $(FLUTTER_APP_CACHE_DIR)/cpp_client_wrapper_glfw)
+WRAPPER_ROOT=$(abspath $(FLUTTER_EPHEMERAL_DIR)/cpp_client_wrapper_glfw)
 WRAPPER_SOURCES= \
 	$(WRAPPER_ROOT)/flutter_window_controller.cc \
 	$(WRAPPER_ROOT)/plugin_registrar.cc \
@@ -79,11 +81,12 @@ WRAPPER_SOURCES= \
 
 # Use abspath for extra sources, which may also contain relative paths (see
 # note above about WRAPPER_ROOT).
-SOURCES=main.cc $(WRAPPER_SOURCES) $(abspath $(EXTRA_SOURCES))
+SOURCES=main.cc flutter/generated_plugin_registrant.cc $(WRAPPER_SOURCES) \
+	$(abspath $(EXTRA_SOURCES))
 
 # Headers
 WRAPPER_INCLUDE_DIR=$(WRAPPER_ROOT)/include
-INCLUDE_DIRS=$(FLUTTER_APP_CACHE_DIR) $(WRAPPER_INCLUDE_DIR)
+INCLUDE_DIRS=$(FLUTTER_EPHEMERAL_DIR) $(WRAPPER_INCLUDE_DIR)
 
 # Build settings
 ifneq ($(strip $(SYSTEM_LIBRARIES)),)
@@ -111,7 +114,7 @@ all: $(BIN_OUT) bundle
 # This is a phony target because the flutter tool cannot describe
 # its inputs and outputs yet.
 .PHONY: sync
-sync: flutter/generated_config
+sync: $(FLUTTER_CONFIG_FILE)
 	$(LINUX_BUILD) linux-x64 $(BUILD)
 
 .PHONY: bundle
