--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,14 +14,41 @@ jobs:
         with:
           channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64 # optional, x64 or arm64
+      - uses: actions/setup-java@v2
+        with:
+          distribution: "zulu"
+          java-version: "11"
       - run: |
           sudo apt-get update -y
           sudo apt-get install -y ninja-build libgtk-3-dev
       - run: flutter --version
       - run: flutter pub get
       # - run: flutter test
+      - name: Build apk using debug key
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "C=US, O=Android, CN=Android Debug"
+          echo "storeFile=$(pwd)/debug.keystore" >> android/key.properties
+          echo "keyAlias=androiddebugkey" >> android/key.properties
+          echo "keyPassword=android" >> android/key.properties
+          echo "storePassword=android" >> android/key.properties
+
+      - run: flutter build apk --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: android
+          path: build/android
+
       - run: flutter build web --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: web
+          path: build/web
       - run: flutter build linux --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: linux
+          path: build/linux
 
   macos:
     runs-on: macos-latest
@@ -35,7 +62,15 @@ jobs:
       - run: flutter pub get
       # - run: flutter test
       - run: flutter build ios --release --no-codesign
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ios
+          path: build/ios
       - run: flutter build macos --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: macos
+          path: build/macos
 
   windows:
     runs-on: windows-latest
@@ -49,3 +84,7 @@ jobs:
       - run: flutter pub get
       # - run: flutter test
       - run: flutter build windows --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: windows
+          path: build/windows
