--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -25,7 +25,6 @@ jobs:
       - run: flutter pub get
       # - run: flutter test
       - name: Build apk using debug key
-        if: startsWith(matrix.os, 'ubuntu')
         run: |
           keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "C=US, O=Android, CN=Android Debug"
           echo "storeFile=$(pwd)/debug.keystore" >> android/key.properties
@@ -66,11 +65,11 @@ jobs:
         with:
           name: ios
           path: build/ios
-      - run: flutter build macos --release
-      - uses: actions/upload-artifact@v3
-        with:
-          name: macos
-          path: build/macos
+      # - run: flutter build macos --release
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: macos
+      #     path: build/macos
 
   windows:
     runs-on: windows-latest
