--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64 # optional, x64 or arm64
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
           distribution: "zulu"
           java-version: "11"
@@ -24,7 +24,7 @@ jobs:
       - run: flutter --version
       - run: flutter pub get
       # - run: flutter test
-      - name: Build apk using debug key
+      - name: generate debug key
         run: |
           keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "C=US, O=Android, CN=Android Debug"
           echo "storeFile=$(pwd)/debug.keystore" >> android/key.properties
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: android
-          path: build/android
+          path: build/app/outputs/apk
 
       - run: flutter build web --release
       - uses: actions/upload-artifact@v3
