--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -41,7 +41,17 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: android
-          path: build/app/outputs/apk
+          path: build/app/outputs
+      - uses: r0adkll/upload-google-play@v1
+        env:
+          SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+        with:
+          serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+          packageName: com.prijindal.fastter_todo
+          track: INTERNAL
+          releaseFiles: build/app/outputs/bundle/release/app-release.aab
+          mappingFile: build/app/outputs/mapping/release/mapping.txt
+          debugSymbols: build/app/intermediates/merged_native_libs/release/out/lib
 
       - run: flutter build web --release
       - uses: actions/upload-artifact@v3
