--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -43,10 +43,8 @@ jobs:
           name: android
           path: build/app/outputs
       - uses: r0adkll/upload-google-play@v1
-        env:
-          SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         with:
-          serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.prijindal.fastter_todo
           track: INTERNAL
           releaseFiles: build/app/outputs/bundle/release/app-release.aab
