--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -6,7 +6,7 @@ on:
 name: Flutter
 
 jobs:
-  linux:
+  android:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,9 +18,6 @@ jobs:
         with:
           distribution: "zulu"
           java-version: "11"
-      - run: |
-          sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev
       - run: flutter --version
       - run: flutter pub get
       # - run: flutter test
@@ -36,7 +33,7 @@ jobs:
           echo "keyPassword=$KEY_PASSWORD" >> android/key.properties
           echo "storePassword=$KEY_PASSWORD" >> android/key.properties
 
-      - run: flutter build apk --release
+      # - run: flutter build apk --release
       - run: flutter build appbundle --release
       - uses: actions/upload-artifact@v3
         with:
@@ -51,6 +48,20 @@ jobs:
           mappingFile: build/app/outputs/mapping/release/mapping.txt
           debugSymbols: build/app/intermediates/merged_native_libs/release/out/lib
 
+  linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable" # or: 'beta', 'dev' or 'master'
+          architecture: x64 # optional, x64 or arm64
+      - run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+      - run: flutter --version
+      - run: flutter pub get
+      # - run: flutter test
       - run: flutter build web --release
       - uses: actions/upload-artifact@v3
         with:
