--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -65,6 +65,12 @@ jobs:
       - run: flutter pub get
       # - run: flutter test
       - run: flutter build web --release
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FASTTER_TODO }}'
+          channelId: live
+          projectId: fastter-todo
       - uses: actions/upload-artifact@v3
         with:
           name: web
