--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -128,7 +128,7 @@ jobs:
           releaseFiles: build/app/outputs/bundle/release/app-release.aab
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.prijindal.fastter_todo
-          track: internal
+          track: beta
           status: completed
           debugSymbols: build/app/intermediates/merged_native_libs/release/out/lib/
           mappingFile: build/app/outputs/mapping/release/mapping.txt
