--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,7 +92,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icon/ic_launcher.png
+   - assets/icon/ic_launcher.png
+   - assets/icon/prijindal.png
+   - assets/icon/firebase.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
