--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   hexcolor: ^3.0.1
   flex_color_picker: ^3.7.0
   share_plus: ^10.1.3
+  drift_flutter: ^0.2.4
 
 dev_dependencies:
   flutter_test:
