--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   flex_color_picker: ^3.7.0
   share_plus: ^10.1.3
   drift_flutter: ^0.2.4
+  drift_hrana: ^1.0.2
+  restart_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
