--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -116,6 +116,7 @@ jobs:
   android-publish:
     needs: [test, android]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Download appbundle from android build
         uses: actions/download-artifact@v4
@@ -170,6 +171,7 @@ jobs:
   web-publish:
     needs: [test, web]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - name: Download web build from linux build
@@ -313,8 +315,8 @@ jobs:
       - run: flutterfire configure -y --platforms=windows --ios-bundle-id=com.prijindal.fastterTodo --macos-bundle-id=com.prijindal.fastterTodo --web-app-id=1:986771470665:web:7c4efac824caf0c8248298 --android-package-name=com.prijindal.fastter_todo --windows-app-id=1:986771470665:web:b13cc73f22fe39ff248298
         env:
           GOOGLE_APPLICATION_CREDENTIALS: google-application-credentials.json
-      - run: flutter build windows --release
+      - run: dart run msix:create
       - uses: actions/upload-artifact@v4
         with:
           name: windows
-          path: build/windows/x64/runner/Release
+          path: build/windows/x64/runner/Release/fastter_todo.msix
