--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   drift_flutter: ^0.2.4
   drift_hrana: ^1.0.2
   restart_app: ^1.3.2
+  flutter_local_notifications_windows: ^1.0.0-dev.3
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
