--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,6 @@ dependencies:
   drift_flutter: ^0.2.4
   drift_hrana: ^1.0.2
   restart_app: ^1.3.2
-  flutter_local_notifications_windows: ^1.0.0-dev.3
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
 
@@ -134,11 +133,12 @@ flutter:
 msix_config:
   display_name: Fastter Todo
   publisher_display_name: Priyanshu Jindal
+  publisher: CN=Priyanshu Jindal, O=Priyanshu Jindal, C=INDIA
   identity_name: com.prijindal.FastterTodo
   logo_path: assets/icon/ic_launcher.png
   msix_version: 1.0.0.0
-  store: false
-  install_certificate: false
+  store: true
+  install_certificate: true
   debug: false
   toast_activator:
     clsid: "d49b0314-ee7a-4626-bf79-97cdb8a991bb"
