--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   restart_app: ^1.3.2
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  firebase_crashlytics: ^4.3.0
+  firebase_analytics: ^11.4.0
 
 dev_dependencies:
   flutter_test:
