--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,6 +60,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId = "com.prijindal.fastter_todo"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
