--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,9 +71,12 @@ dependencies:
   timezone: ^0.10.0
   firebase_crashlytics: ^4.3.0
   firebase_analytics: ^11.4.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
