--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   firebase_crashlytics: ^4.3.0
   firebase_analytics: ^11.4.0
   mocktail: ^1.0.4
+  form_builder_validators: ^11.1.1
 
 dev_dependencies:
   flutter_test:
