--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   firebase_analytics: ^11.4.0
   mocktail: ^1.0.4
   form_builder_validators: ^11.1.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
