Added pipeline for building non firebase on github
changed format of version name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,7 +68,7 @@ android {
         minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = code
-        versionName = flutterVersionName + "." + code.toString()
+        versionName = flutterVersionName + "-" + code.toString()
     }
 
     signingConfigs {
