--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -43,8 +43,62 @@ jobs:
         env: 
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+  android-without-firebase:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable" # or: 'beta', 'dev' or 'master'
+          architecture: x64 # optional, x64 or arm64
+          cache: true
+          cache-key: 'flutter-${{ github.job }}-:os:-:channel:-:version:-:arch:-:hash:'
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "zulu"
+          java-version: "17"
+      
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            build/
+            android/.gradle/
+          key: ${{ runner.os }}-flutter-${{ github.job }}-${{ hashFiles('**/*.gradle*', 'pubspec.lock') }}
+      - run: flutter pub get
+      - name: save release key
+        env:
+          KEY_FILE_BASE64: ${{ secrets.KEY_FILE_BASE64 }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        run: |
+          echo "$KEY_FILE_BASE64" | base64 -d > "$(pwd)/release.keystore"
+          echo "storeFile=$(pwd)/release.keystore" >> android/key.properties
+          echo "keyAlias=$KEY_ALIAS" >> android/key.properties
+          echo "keyPassword=$KEY_PASSWORD" >> android/key.properties
+          echo "storePassword=$KEY_PASSWORD" >> android/key.properties
+          echo "VERSION_CODE=`expr 185 + $GITHUB_RUN_NUMBER`" > android/version.properties
+      - run: flutter build apk --release --split-per-abi
+      - uses: actions/upload-artifact@v4
+        with:
+          name: android-arm64-v8a
+          path: build/app/outputs/apk/release/app-arm64-v8a-release.apk
+      - uses: actions/upload-artifact@v4
+        with:
+          name: android-armeabi-v7a
+          path: build/app/outputs/apk/release/app-armeabi-v7a-release.apk
+      - uses: actions/upload-artifact@v4
+        with:
+          name: android-x86_64
+          path: build/app/outputs/apk/release/app-x86_64-release.apk
+      - uses: actions/upload-artifact@v4
+        with:
+          name: android-output-metadata
+          path: build/app/outputs/apk/release/output-metadata.json
 
-  android:
+
+  android-with-firebase:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -90,24 +144,6 @@ jobs:
       - run: flutterfire configure -y --platforms=android --ios-bundle-id=com.prijindal.fastterTodo --macos-bundle-id=com.prijindal.fastterTodo --web-app-id=1:986771470665:web:7c4efac824caf0c8248298 --android-package-name=com.prijindal.fastter_todo --windows-app-id=1:986771470665:web:b13cc73f22fe39ff248298
         env:
           GOOGLE_APPLICATION_CREDENTIALS: google-application-credentials.json
-      - run: flutter build apk --release --split-per-abi
-      - uses: actions/upload-artifact@v4
-        with:
-          name: android-arm64-v8a
-          path: build/app/outputs/apk/release/app-arm64-v8a-release.apk
-      - uses: actions/upload-artifact@v4
-        with:
-          name: android-armeabi-v7a
-          path: build/app/outputs/apk/release/app-armeabi-v7a-release.apk
-      - uses: actions/upload-artifact@v4
-        with:
-          name: android-x86_64
-          path: build/app/outputs/apk/release/app-x86_64-release.apk
-      - uses: actions/upload-artifact@v4
-        with:
-          name: android-output-metadata
-          path: build/app/outputs/apk/release/output-metadata.json
-      - run: echo "VERSION_CODE=`expr 185 + $GITHUB_RUN_NUMBER`" > android/version.properties
       - run: flutter build appbundle --release
       - uses: actions/upload-artifact@v4
         with:
@@ -118,7 +154,7 @@ jobs:
             build/app/intermediates/merged_native_libs/release/out/lib/
 
   android-publish:
-    needs: [test-linux, android]
+    needs: [test-linux, android-with-firebase]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
