--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -96,6 +96,10 @@ jobs:
         with:
           name: android-output-metadata
           path: build/app/outputs/apk/release/output-metadata.json
+      - run: dart run create_release.dart
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_PATHS: build/app/outputs/apk/release/app-arm64-v8a-release.apk
 
 
   android-with-firebase:
