--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   mocktail: ^1.0.4
   form_builder_validators: ^11.1.1
   permission_handler: ^11.3.1
+  github: ^9.24.0
 
 dev_dependencies:
   flutter_test:
