--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -67,6 +67,7 @@ jobs:
             android/.gradle/
           key: ${{ runner.os }}-flutter-${{ github.job }}-${{ hashFiles('**/*.gradle*', 'pubspec.lock') }}
       - run: flutter pub get
+      - run: export VERSION_CODE=`expr 185 + $GITHUB_RUN_NUMBER`
       - name: save release key
         env:
           KEY_FILE_BASE64: ${{ secrets.KEY_FILE_BASE64 }}
@@ -78,7 +79,7 @@ jobs:
           echo "keyAlias=$KEY_ALIAS" >> android/key.properties
           echo "keyPassword=$KEY_PASSWORD" >> android/key.properties
           echo "storePassword=$KEY_PASSWORD" >> android/key.properties
-          echo "VERSION_CODE=`expr 185 + $GITHUB_RUN_NUMBER`" > android/version.properties
+          echo "VERSION_CODE=$VERSION_CODE" > android/version.properties
       - run: flutter build apk --release --split-per-abi
       - uses: actions/upload-artifact@v4
         with:
@@ -99,7 +100,7 @@ jobs:
       - run: dart run create_release.dart
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_PATHS: build/app/outputs/apk/release/app-arm64-v8a-release.apk
+          RELEASE_PATHS: build/app/outputs/apk/release/
 
 
   android-with-firebase:
