--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ dependencies:
   form_builder_validators: ^11.1.1
   permission_handler: ^11.3.1
   github: ^9.24.0
+  pub_semver: ^2.1.5
+  yaml: ^3.1.3
 
 dev_dependencies:
   flutter_test:
