--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -106,6 +106,7 @@ jobs:
 
   android-with-firebase:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
