--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -98,12 +98,19 @@ jobs:
           name: android-output-metadata
           path: build/app/outputs/apk/release/output-metadata.json
 
-  android-release:
+  github-release:
     needs: [test-linux, android-apk]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable" # or: 'beta', 'dev' or 'master'
+          architecture: x64 # optional, x64 or arm64
+          cache: true
+          cache-key: 'flutter-${{ github.job }}-:os:-:channel:-:version:-:arch:-:hash:'
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:'
       - name: Download apks from android build
         uses: actions/download-artifact@v4
         with:
@@ -162,7 +169,7 @@ jobs:
             build/app/outputs/mapping/release/
             build/app/intermediates/merged_native_libs/release/out/lib/
 
-  android-publish:
+  google-play-publish:
     needs: [test-linux, android-appbundle]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
