--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -121,7 +121,7 @@ jobs:
       - run: dart run create_release.dart
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_PATHS: build/app/outputs/apk/release/
+          RELEASE_PATHS: build/android/
           INCREMENT_VERSION: 186
 
   android-appbundle:
