--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -99,7 +99,7 @@ jobs:
           path: build/app/outputs/apk/release/output-metadata.json
 
   github-release:
-    needs: [test-linux, android-apk]
+    needs: [test-linux, android-apk, linux]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
@@ -117,11 +117,16 @@ jobs:
           pattern: android-*
           merge-multiple: true
           path: build/android/
+      - name: Download linux build
+        uses: actions/download-artifact@v4
+        with:
+          name: linux
+          path: build/linux/
       - run: flutter pub get
       - run: dart run create_release.dart
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_PATHS: build/android/
+          RELEASE_PATHS: build/android/,build/linux/
           INCREMENT_VERSION: 186
 
   android-appbundle:
@@ -257,10 +262,11 @@ jobs:
       
       - run: flutter pub get
       - run: flutter build linux --release
+      - run: tar -cxvf linux.tar.xz build/linux/x64/release/bundle
       - uses: actions/upload-artifact@v4
         with:
           name: linux
-          path: build/linux/x64/release/bundle
+          path: linux.tar.xz
     
   macos:
     runs-on: macos-latest
@@ -335,8 +341,13 @@ jobs:
           key: ${{ runner.os }}-flutter-${{ github.job }}-${{ hashFiles('pubspec.lock') }}
       
       - run: flutter pub get
-      - run: dart run msix:create
+      - run: flutter build windows --release
+      - name: Compile .ISS to .EXE Installer
+        uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
+        with:
+          path: windows.iss
+          options: /O+
       - uses: actions/upload-artifact@v4
         with:
           name: windows
-          path: build/windows/x64/runner/Release/fastter_todo.msix
+          path: Output/
